<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.javaindo.lautnusantara.view.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_helpcenter"
        android:name="com.javaindo.lautnusantara.view.home.ui.helpcenter.HelpCenterFragment"
        android:label="@string/title_help_center"
        tools:layout="@layout/fragment_help_center" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.javaindo.lautnusantara.view.home.ui.information.InformationFragment"
        android:label="@string/title_Information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.javaindo.lautnusantara.view.home.ui.information.InformationFragment"
        android:label="@string/title_Account"
        tools:layout="@layout/fragment_account" />
</navigation>